--- a/src/app/schedule/schedule.component.scss
+++ b/src/app/schedule/schedule.component.scss
@@ -3,9 +3,14 @@ TabView {
     selected-tab-text-color: #ff1744;
     tab-background-color: #ffffff;
     android-selected-tab-highlight-color: #ff1744;
+
     
 }
 
 TabViewItem {
     text-transform: none;
+}
+
+.ios-tab {
+    font-size: 16;
 }
