--- a/src/app/info/components/info-item/info-item.component.html
+++ b/src/app/info/components/info-item/info-item.component.html
@@ -3,7 +3,7 @@
         <GridLayout columns="50, *" rows="50, auto, 30, 15" width="auto" height="auto" backgroundColor="#ffffff"
             horizontalAlignment="left" verticalAlignment="center" style="padding: 10 20;">
 
-            <Label [text]="item.icon" class="fa" textAlignment="left" verticalAlignment="center" horizontalAlignment="center"
+            <Label [text]="item.resolveIcon(item.icon)" class="fa" textAlignment="left" verticalAlignment="center" horizontalAlignment="center"
                 fontSize="36" row="0" col="0" style="color: #3C4043;"></Label>
 
 
