--- a/src/app/speakers/speakers.component.html
+++ b/src/app/speakers/speakers.component.html
@@ -5,23 +5,21 @@
     -->
     <NavigationButton ios:visibility="collapsed" icon="res://menu" (tap)="onDrawerButtonTap()"></NavigationButton>
 
-    
     <!-- 
     Use the ActionItem for IOS with position set to left. Using the
     NavigationButton as a side-drawer button in iOS is not possible,
     because its function is to always navigate back in the application.
     -->
     <ActionItem icon="res://navigation/menu" android:visibility="collapsed" (tap)="onDrawerButtonTap()"
-    ios.position="left">
-        </ActionItem>
-        
+        ios.position="left">
+    </ActionItem>
 
     <Label class="action-bar-title" text="Speakers" style="font-size: 16;"></Label>
 </ActionBar>
-
-<GridLayout class="page page-content">
-    <StackLayout style="padding: 10 5;">
-        <SpeakersList></SpeakersList>
-    </StackLayout>
-    
-</GridLayout>
+<PullToRefresh [refreshing]="isRefreshing" (refresh)="refreshData($event)">
+    <GridLayout class="page page-content">
+        <StackLayout style="padding: 10 5;">
+            <SpeakersList></SpeakersList>
+        </StackLayout>
+    </GridLayout>
+</PullToRefresh>
