--- a/src/_app-common.scss
+++ b/src/_app-common.scss
@@ -1,6 +1,11 @@
 // Place any CSS rules you want to apply on both iOS and Android here.
 // This is where the vast majority of your CSS code goes.
 // Font icon class
+ActionBar.action-bar {
+    background-color:  #3949ab;
+    color: white;
+}
+
 .fa {
     font-family: "FontAwesome";
 }
