--- a/src/app/containers/schedule/containers/jspoland/js-poland.component.html
+++ b/src/app/containers/schedule/containers/jspoland/js-poland.component.html
@@ -1,12 +1,13 @@
 <StackLayout *ngIf="events$ | async as events; else nocontent">
+	<PullToRefresh [refreshing]="isLoading$ | async" (refresh)="refreshData($event)">
 		<ListView class="list-group" [items]="events" style="height:100%;padding-top: 3;" separatorColor="#ffffff">
-				<ng-template let-event="item">
-			
-					<EventItem [eventItem]="event"></EventItem>
-			
-				</ng-template>
-			</ListView>
+			<ng-template let-event="item">
+				<EventItem [eventItem]="event"></EventItem>
+			</ng-template>
+		</ListView>
+	</PullToRefresh>
 </StackLayout>
 <ng-template #nocontent>
-		<ActivityIndicator row="1" #activityIndicator busy="true" width="100" height="100" class="activity-indicator"></ActivityIndicator>
+	<ActivityIndicator row="1" #activityIndicator busy="true" width="100" height="100" class="activity-indicator">
+	</ActivityIndicator>
 </ng-template>
