--- a/src/app/containers/speakers/containters/speakers-list/speakers-list.component.html
+++ b/src/app/containers/speakers/containters/speakers-list/speakers-list.component.html
@@ -1,14 +1,13 @@
-
-
 <StackLayout *ngIf="speakers$ | async as speakers; else nocontent">
-		<ListView class="list-group myclass" [items]="speakers" style="height: 100%;" separatorColor="#ff1744" >
-				<ng-template let-speaker="item">
-			
-					<Speaker [speaker]="speaker" ></Speaker>
-			
-				</ng-template>
-			</ListView>
+	<PullToRefresh [refreshing]="isLoading$ | async" (refresh)="refreshData($event)">
+		<ListView class="list-group myclass" [items]="speakers" style="height: 100%;" separatorColor="#ff1744">
+			<ng-template let-speaker="item">
+				<Speaker [speaker]="speaker"></Speaker>
+			</ng-template>
+		</ListView>
+	</PullToRefresh>
 </StackLayout>
 <ng-template #nocontent>
-		<ActivityIndicator row="1" #activityIndicator busy="true" width="100" height="100" class="activity-indicator"></ActivityIndicator>
+	<ActivityIndicator row="1" #activityIndicator busy="true" width="100" height="100" class="activity-indicator">
+	</ActivityIndicator>
 </ng-template>
