--- a/src/app/containers/about/about.component.html
+++ b/src/app/containers/about/about.component.html
@@ -18,19 +18,19 @@
 
 
     <StackLayout style="padding: 15 20;">
-        <Image src="res://logong" style="width: 70%;margin-bottom: 20;" android:style="margin-top: 20;" ios:style="margin-top: 90;"></Image>
+        <NSImg src="res://logong" style="width: 70%;height: 150;margin-bottom: 20;" android:style="margin-top: 20;" ios:style="margin-top: 90;"></NSImg>
         <Label text="This app is built with NativeScript + Angular!" textWrap="true" style="color: #3949ab;font-size: 14; text-align: center;margin-bottom: 15;"
         verticalAlignment="center"></Label>
         <StackLayout class="hr-light m-10"></StackLayout>
         <GridLayout rows="30, 80, 80" columns="70, *" style="margin-top: 15;margin-bottom: 15;">
             <Label row="0" col="0" colSpan="2"  text="Authors:" textWrap="true" style="color: #ff1744;font-size: 14;" ></Label>
-            <Image row="1" col="0" src="res://sd" borderRadius="200" horizontalAlignment="center" width="60" height="60"
-            (tap)="showSebekDetails()"></Image>
+            <NSImg row="1" col="0" src="res://sd" horizontalAlignment="center" width="60" height="60" roundAsCircle="true" stretch="aspectFit"
+            (tap)="showSebekDetails()"></NSImg>
             <Label row="1" col="1" text="Sebastian Denis"  fontSize="14" verticalAlignment="center" textAlignment="left"
             style="color: #3C4043;margin-left: 15;"  (tap)="showSebekDetails()" ></Label>
-            <Image row="2" col="0" src="res://dk" borderRadius="200" horizontalAlignment="center" width="60" height="60"
+            <NSImg row="2" col="0" src="res://dk" horizontalAlignment="center" width="60" height="60" roundAsCircle="true" stretch="aspectFit"
             (tap)="showDarekDetails()" 
-            ></Image>
+            ></NSImg>
             <Label row="2" col="1" text="Dariusz Kalbarczyk" fontSize="14" verticalAlignment="center" 
             textAlignment="left"
             style="color: #3C4043;margin-left: 15;" (tap)="showDarekDetails()" ></Label>
