--- a/src/app/containers/speakers/components/speaker/speaker.component.html
+++ b/src/app/containers/speakers/components/speaker/speaker.component.html
@@ -2,7 +2,7 @@
   <StackLayout class="cardStyle2" style="margin: 5;">
     <GridLayout rows="auto, *" columns="100, *" style="padding: 5 5;">
       <StackLayout row="0" col="0" rowSpan="2">
-        <WebImage
+        <!-- <WebImage
           stretch="aspectFit"
           borderRadius="500"
           horizontalAlignment="center"
@@ -20,7 +20,8 @@
 
         ios:visibility="collapsed">
 
-        </Image>
+        </Image> -->
+        <NSImg  src="{{speaker?.photo.getImageUrl()}}" placeholderImageUri="res://person" verticalAlignment="center" roundAsCircle="true" stretch="aspectFit" style="margin-right: 15;"></NSImg>
       </StackLayout>
 
       <label
