--- a/src/app/containers/about/about.component.html
+++ b/src/app/containers/about/about.component.html
@@ -38,9 +38,9 @@
 
         <StackLayout class="hr-light m-10"></StackLayout>
         <GridLayout rows="auto" columns="70, *" style="margin-top: 15;">
-            <Label text="&#xf09b;"  class="fa-b" row="0" col="0" fontSize="36" color="#3C4043" verticalAlignment="center" textAlignment="center"></Label>
+            <NSImg row="0" col="0" src="res://github" verticalAlignment="center" textAlignment="center"  width="40" height="40"  stretch="aspectFit" ></NSImg>
             <Label row="0" col="1" text="https://github.com/sebastiandenis/ngPolandConf" textWrap="true"  verticalAlignment="center" textAlignment="left"
-            style="color: #3C4043;font-size: 12;color: #3949ab;text-decoration: underline;" (tap)="onGitHubLinkTap()"></Label>
+            style="color: #3C4043;font-size: 12;margin-left: 15;color: #3949ab;text-decoration: underline;" (tap)="onGitHubLinkTap()"></Label>
         </GridLayout>
 
     </StackLayout>
