--- a/src/app/shared/components/speaker-details/speaker-details.component.css
+++ b/src/app/shared/components/speaker-details/speaker-details.component.css
@@ -1,7 +1,11 @@
-.my-btn{
+.my-btn {
     border-color: transparent;
     border-width: 1;
     z-index: 0;
     background-color: transparent;
     color: #3949ab;
+}
+
+.page-padding {
+    
 }
